--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 fastapi
-uvicorn
+uvicorn[standard]
 jinja2
 requests
-python-dotenv
 sqlalchemy
+pydantic
+pydantic[email]
 pymysql
-apscheduler
 langchain
-langchain_openai
-langchain_community
+langchain-community
+langchain-openai
+openai
 pypdf
+tiktoken
 chromadb
+gunicorn
+apscheduler
