update static ip

--- a/nginx/project.conf
+++ b/nginx/project.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 고정ip;
+    server_name 13.209.220.42;
 
     location / {
         proxy_pass http://fastapi:8000;
